<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:id="@+id/tv_fensi_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/c_main"
        android:text="@string/s_all"
        android:padding="@dimen/dp_5"
        />
    <TextView
        android:id="@+id/tv_fensi_super_vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/c_343434"
        android:text="@string/s_super_vip"
        android:padding="@dimen/dp_5"
        />
    <TextView
        android:id="@+id/tv_fensi_plain_vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/c_343434"
        android:text="@string/s_plain_vip"
        android:padding="@dimen/dp_5"
        />

</LinearLayout>